--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -166,3 +166,13 @@ body {
   height: 600px;
   width: 1500px;
 }
+
+#chart2 {
+  height: 800px;
+  width: 800px;
+}
+
+#chart3 {
+  height: 800px;
+  width: 800px;
+}
