--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@
   
 /* Body styling to fill the entire screen */
 body {
-  background-color: #fff;
+  background-color: #b2b2b2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,7 +21,7 @@ body {
   position: fixed; /* locks the top of page to the top */
   width: 100%;
   height: 20vh; 
-  background-color: #fff;
+  background-color: #b2b2b2;
   border-bottom: 2px solid black;
   padding: 20px;
   display: flex;
@@ -94,7 +94,7 @@ section {
 
 .dropdown-button {
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: #1B9E77;
   color: white;
   border: none;
   cursor: pointer;
@@ -160,7 +160,7 @@ section {
 
 /* Style each chart container */
 .chart {        
-  background-color: #f0f0f0;
+  background-color: #ccc;
   border: 1px solid #ccc;    
   border-radius: 0px 0px 8px 8px;         
 }
@@ -178,6 +178,8 @@ h3 {
   width: 1200px;
 }
 
+
+
 #chart2 {
   height: 600px;
   width: 500px;
@@ -191,4 +193,26 @@ h3 {
 #chart4 {
   height: 800px;
   width: 800px;
+}
+
+/* Styling the slider bar */
+#year-range-slider .noUi-connect {
+  background-color: purple; /* Purple slider track */
+}
+
+/* Styling the slider handles */
+#year-range-slider .noUi-handle {
+  background-color: purple; /* Purple handles */
+  border: 2px solid black;  /* Optional: add a border to handles */
+  border-radius: 50%;       /* Optional: make handles circular */
+}
+
+/* Styling the slider base (track) */
+#year-range-slider .noUi-base {
+  background-color: #e0e0e0; /* Light gray background for contrast */
+}
+
+#tick text {
+  font-size: 24px;
+  font-weight: bold;
 }
